2006-08-01  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.8.0 for release

	* legacy-icon-mapping.xml: Add mail-send and link gnome send icons
	Rename drive/media-cdrom to -optical
	Add media-flash, and link the gnome flash media icons here
	Add security-high, security-medium, and security-low with links to
	the stock_lock icons which these replace with better metaphors

2006-07-24  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.7.4 for release

2006-07-24  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for new view-restore icon
	This icon is the opposite action of view-fullscreen

2006-07-24  Luca Ferreti  <elle.uca@libero.it>

	* legacy-icon-mapping.xml: Add more links for view-fullscreen icon

2006-07-24  Luca Ferreti  <elle.uca@libero.it>

	* legacy-icon-mapping.xml: Add links for window-close icon

2006-07-10  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.7.3 for release

2006-07-10  Niko Mirthes  <nmirthes@gmail.com>

	* legacy-icon-mapping.xml: Update with some changes for KDE

2006-07-09  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Move the link for the
	gnome-settings-accessibility-technnologies name to the standard
	preferences-desktop-accessibility icon
	Remove preferences-desktop-assistive-technology
	Add a link for gnome-modem to modem under devices

2006-07-08  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add link for application/x-scribus

	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=168873

2006-06-29  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add link for application/x-gzpostscript

	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=317416

2006-06-29  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for various realmedia types

	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=340550

2006-05-10  Daniele Favara <danjele@gmail.com>

	* legacy-icon-mapping.xml: Add some links for XFCE
