@@ -1,3 +1,8 @@
+2006-08-19  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Add links for the system-run and
+	application-certificate icons
+
 2006-08-01  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.8.0 for release
